<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.loginsignup.activities.ForgotPasswordActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginLeft="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:src="@drawable/ic_arrow_back_black" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/tvStyleBold"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginLeft="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/forgot_password"
                android:textSize="@dimen/text_header_regular" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/tvStyleRegular"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginLeft="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_marginRight="@dimen/margin_16"
                android:text="@string/forgot_pass_desc"
                android:textColor="@color/colorTextSecondary" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_05"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@color/divider" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtEmail"
                style="@style/edtStyle"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_24"
                android:layout_marginEnd="@dimen/margin_16"
                android:drawableStart="@drawable/ic_email_unselected"
                android:drawableLeft="@drawable/ic_email_unselected"
                android:drawablePadding="@dimen/margin_16"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:maxLength="@integer/max_length_email"
                android:padding="@dimen/margin_16"
                android:textSize="@dimen/text_body2" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSubmit"
                style="@style/btnStyle"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_24"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_24"
                android:text="@string/submit"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>